# RemoteTail

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  server.js
.claude/: settings.json
.github/workflows/: release.yml
frontend/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  local.rs  main.rs  ppk.rs  ssh.rs
